# debt-zero-agent

./: .gitignore  README.md  pyproject.toml
debt_zero_agent/: __init__.py  __main__.py  cli.py
debt_zero_agent/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
debt_zero_agent/models/: __init__.py  fix.py  issue.py
debt_zero_agent/prompts/: __init__.py  templates.py
debt_zero_agent/sonarqube/: __init__.py  client.py
debt_zero_agent/tools/: __init__.py  code_search.py  diff_tool.py  file_reader.py  file_writer.py
debt_zero_agent/validation/: __init__.py  ast_validator.py  locator.py  tree_sitter.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  TASKS.md
examples/: ANTHROPIC_EXAMPLE.md  GEMINI_EXAMPLE.md  OPENAI_EXAMPLE.md  run_anthropic_example.sh  run_gemini_example.sh  run_openai_example.sh
scripts/: list_gemini_models.py  test_gemini_api.sh
tests/: test_agent.py  test_cli.py  test_cli_fetch.py  test_gemini.py  test_integration.py  test_models.py  test_sonarqube.py  test_tools.py  test_validation.py
tests/fixtures/: sample_code.py  sample_issues.json  test_issues.json
tests/fixtures/test_repo/: sample.py
