[project]
name = "debt-zero-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacek Poreda", email = "jckporeda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
]

[project.scripts]
debt-zero-agent = "debt_zero_agent.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
